--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@
 	margin-right : auto;
 }
 
+.mla {
+	margin-left : auto;
+}
+
 .left {
 	float : left;
 }
@@ -39,6 +43,27 @@ a {
 
 .cover:after {
 	clear : both;
+}
+
+.learn-more {
+	display : inline-block;
+	cursor  : pointer;
+	color   : #FFF;
+	width   : auto;
+	font-size : 17px;
+	font-family : 'Roya';
+	padding : 6px 15px;
+	border-radius : 3px;
+	background-color : #93ac12;
+	background-image : -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+	background-image :    -moz-linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+	background-image :     -ms-linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+	background-image :      -o-linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+	text-shadow      : 0 -1px rgba(0, 0, 0, 0.2);
+}
+
+.learn-more:hover {
+	background-color : #333;
 }
 
 @font-face {
@@ -83,12 +108,14 @@ a {
 /* Header
 ******************************/
 header {
-	border-top : 4px solid #93ac12;
+	border-top : 3px solid #93ac12;
 }
 
 .logo a {
 	color : #333;
-	font-size : inherit;
+	display   : block;
+	font      : inherit;
+	padding   : 20px;
 }
 
 nav {
@@ -131,8 +158,7 @@ nav a {
 	color   : #333;
 	display : block;
 	padding : 41px 20px 26px;
-	font-size : 17px;
-	font-weight : bold;
+	font-size : 15px;
 }
 
 /* Banner
@@ -144,14 +170,14 @@ nav a {
 .content-featured {
 	background-color : #1a1a1a;
 	color   : #e5e5e5;
-	padding : 30px 0;
+	padding : 25px 0;
 	box-shadow : 0 4px 4px rgba(0,0,0,0.4) inset;
 	text-align : center;
 	margin-bottom: 40px;
 }
 
 .content-featured p {
-	font-size : 18px;
+	font-size : 22px;
 }
 
 .content-featured a {
@@ -186,28 +212,13 @@ nav a {
 	border-bottom : 1px solid #d9d9d9;
 }
 
-.bg-article:after {
-	display : block;
-	content : '';
-	position: absolute;
-	z-index : 2;
-	bottom  : -6px;
-	right   : 46%;
-	width   : 10px;
-	height  : 10px;
-	-webkit-transform : rotate(45deg);
-	-moz-transform : rotate(45deg);
-}
-
 .bg-article:hover {
 	background-color : #fff;
 	border-bottom : 1px solid #93ac12;
 }
 
-.bg-article:hover:after {
-	background-color : #fff;
-	border  : 1px solid #93ac12;
-	border-width : 1px 0px 0 1px;
+.bg-article h2 {
+	font-family : 'Titr';
 }
 
 .bg-article:hover h2 {
@@ -218,40 +229,26 @@ nav a {
 	width  : 128px;
 	height : 128px;
 	margin : 10px auto;
-	border : 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .bg-article h2 {
 	color  : #333;
-	margin : 10px 0 15px;
+	margin : 10px 0 20px;
 }
 
 .bg-article p {
+	text-align   : justify;
 	margin-bottom: 20px;
-}
-
-.bg-article span {
-	display : inline-block;
-	cursor  : pointer;
-	color   : #FFF;
-	width   : auto;
-	font-size : 17px;
-	padding : 6px 15px;
-	border-radius : 3px;
-	background-color : #93ac12;
-	text-shadow : 0 -1px rgba(0, 0, 0, 0.2);
-}
-
-.bg-article span:hover {
-	background-color : #333;
+	line-height  : 22px;
+	font-family  : 'Nazanin';
 }
 
 /* Footer
 ******************************/
 
 div.footer-featured {
-	height : 150px;
-	position: relative;
+	padding  : 20px 0; 
+	position : relative;
 	background-color : #93AC0A;
 }
 
@@ -264,6 +261,40 @@ div.footer-featured {
 	border-style : solid;
 	border-width : 10px 10px 0 10px;
 	border-color : #fff transparent transparent transparent;
+}
+
+
+.footer-featured .desc {
+	margin-left: 400px;
+}
+
+.footer-featured h2 {
+	margin : 20px 0;
+}
+
+.footer-featured h2 a {
+	color : #fff;
+	font-family : 'Titr';
+}
+
+.footer-featured h2:hover a {
+	color : #333;
+}
+
+.footer-featured p {
+	color : #fff;
+	line-height  : 22px;
+	font-family  : 'Nazanin';
+	font-size    : 18px;
+	text-align   : right;
+}
+
+.footer-featured .download {
+	display : block;
+	width   : 152px;
+	height  : 128px;
+	background-image: url('../images/pdf.png');
+	
 }
 
 .footer-top {
@@ -279,10 +310,55 @@ div.footer-featured {
 	margin-left : 10px;
 }
 
+.footer-top * {
+	font-family : 'Nazanin';
+}
+
+.footer-top p {
+	line-height : 20px;
+}
+
 .footer-top .title {
-	padding  : 10px 0; 
+	padding  : 10px 0 15px; 
 	color    : #e5e5e5;
+	font-family : 'titr';
+	margin-bottom : 20px;
 	border-bottom : 1px solid #4c4c4c;	
+}
+
+.mail {
+	display : block;
+	background-color : #404040;
+	border  : 1px solid #4c4c4c;
+	padding : 5px 10px;
+	box-shadow : 0 0 5px rgba(0, 0, 0, 0.2) inset;
+	margin  : 20px 0; 
+	width   : 80%;
+	font-size : 15px;
+}
+
+.subscribe {
+	border : none !important;
+	outline: none !important;
+	background-color : #1a1a1a;
+	font-size : 15px;
+	font-weight : bold;
+	padding     : 3px 13px;
+}
+
+.subscribe:hover {
+	background-color: #93ac12;
+}
+
+.footer-top .last li {
+	padding-right : 30px;
+	margin        : 20px 0;
+	background-repeat : no-repeat;
+	background-position : right center;
+}
+
+.footer-top li.email {
+	color : #93ac12;
 }
 
 .footer-bottom {
@@ -291,6 +367,18 @@ div.footer-featured {
 	box-shadow : 0 4px 4px rgba(0,0,0,0.2) inset;
 	border-top : 1px solid #000;
 	padding    : 30px 0;
-	height     : 50px;
+	font-size  : 13px;
 }
+
+.footer-bottom ul li {
+	float : right;
+	margin-left: 15px;
+}
+
+.footer-bottom li a {
+	display : block;
+	width   : 16px;
+	height  : 16px;
+}
+
 
